* New: Timers for combat rezes display the appropriate icon.
* New: Timers for combat rezes will display a ready state when off cool down.
* New: Timers will attempt to order the shortest cool down combat rezes at the top.
* New: Settings will be saved for position the Rez Master anchor.
* Note: There is no menu options for this module at the moment. These will be incoming after initial public testing is complete.

Tank-Swap
* Fixed: Attempted to fix the second debuff stack display not showing.

Infernal Dawn
* Maklamos the Scryer
** Change: Increased timer for Crystaline Desolation by 20 seconds. (This could change again, once the encounter is finished)
* Rusila Dreadblade
** New: Encounter start is now recognized when picking up a Barrel.
** New: Phase change has been implimented for when Heart of the Dread Fortune is destroyed.
** New: Personal Alert for both Cast and Channel of Dread Shot.

Hammerknell Fortress
* Estrode
** New: Added personal alert for Neddra's Grasp.

----
v1.0.5

Engine
* Change: Some optimization work on how events are triggered.
* Change: Internal Unit detail data cache is updated slightly more frequently.

System
* New: /kbmversion now excepts and parses marco variable '%t' for target. '/kbmversion %t' as a macro will inspect your targets KBM Version.

Tank-Swap
* New: Tank-Swap can now track 2 debuffs.
* Change: Event.KingMolinator.System.TankSwap.Start(table = {DebuffList = table{[Debuff Name] = Index}, Enabled = bool})

Infernal Dawn
* Muglak
** New: Added an alert for Brilliant Inferno.
** New: Added a timer for the first Brilliant Inferno.
** New: Added timers for each Brilliant Inferno after the first.
* Maklamos The Scryer
** New: Added a secondary debuff tracker to Tank-Swap for Weakness.

Master Mode Dungeons
* Darkening Deeps
** Alchemist Braxtepel
*** New: Added UID for Squersh. If this encounter was triggered via Squersh it would not initiate correctly.
** Emissary Villizar